# zero2prod

./: Cargo.toml  README.md
.cargo/: cargo.toml
.github/workflows/: general.yml  rust.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
